<resources>
    <string name="app_name">407_final_project</string>
    <string name="welcome">Welcome to MarbleMaze</string>
    <string name="how_to_play">How to Play</string>
    <string name="get_started">Get Started</string>
    <string name="top_bar_desc">Bar at top of screen</string>
    <string name="return_to_home">Return to Home Screen</string>
    <string name="settings_header">Settings</string>
    <string name="settings_ball_color">Marble Color - Current color:</string>
    <string name="settings_wall_color">Wall Color - Current color:</string>

    <string name="title">MarbleMaze</string>
    <string name="level1_button_text">1</string>
    <string name="level1_label">Level 1</string>

    <string name="level2_button_text">2</string>
    <string name="level2_label">Level 2</string>

    <string name="level3_button_text">3</string>
    <string name="level4_button_text">4</string>
    <string name="level5_button_text">5</string>
    <string name="level6_button_text">6</string>
    <string name="level7_button_text">7</string>
    <string name="level8_button_text">8</string>
    <string name="level9_button_text">9</string>
    <string name="level10_button_text">10</string>
    <string name="level11_button_text">11</string>
    <string name="level12_button_text">12</string>

    <string name="level_select_label">Levels</string>
    <string name="back_button_desc">Back button</string>

    <string name="how_to_play_text">The goal of MarbleMaze is to get your marble to the end of the maze!
    To move the marble, you must tilt and rotate your phone. When you beat a level, you can advance onto the next level until you have
    completed all of the levels or just replay your favorite levels! Be careful not to hit the obstacles placed in the maze!</string>
</resources>