<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LevelSelect">

    <ImageView
        android:id = "@+id/level_select_top_bar"
        android:contentDescription="@string/top_bar_desc"
        android:src="@drawable/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/settings_cog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/settings_cog"
        android:background="@null"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/settings_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_back"
        android:contentDescription="@string/back_button_desc"
        app:layout_constraintStart_toStartOf="@id/level_select_top_bar"
        app:layout_constraintTop_toTopOf="@id/level_select_top_bar"
        android:padding="0dp"
        android:background="@null" />

    <TextView
        android:id="@+id/level_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_select_label"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/level_select_top_bar"
        app:layout_constraintBottom_toBottomOf="@id/level_select_top_bar"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:useDefaultMargins="true"
        android:columnCount="3"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/level_select_top_bar"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/level1_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cornerRadius="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:layout_gravity="fill"
            android:text="@string/level1_button_text"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/level2_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cornerRadius="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:layout_gravity="fill"
            android:text="@string/level2_button_text"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/level3_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cornerRadius="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:layout_gravity="fill"
            android:text="@string/level3_button_text"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/level4_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cornerRadius="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:layout_gravity="fill"
            android:text="@string/level4_button_text"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/level5_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cornerRadius="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:layout_gravity="fill"
            android:text="@string/level5_button_text"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/level6_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cornerRadius="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:layout_gravity="fill"
            android:text="@string/level6_button_text"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/level7_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cornerRadius="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:layout_gravity="fill"
            android:text="@string/level7_button_text"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/level8_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cornerRadius="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:layout_gravity="fill"
            android:text="@string/level8_button_text"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/level9_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cornerRadius="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:layout_gravity="fill"
            android:text="@string/level9_button_text"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/level10_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cornerRadius="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:layout_gravity="fill"
            android:text="@string/level10_button_text"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/level11_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cornerRadius="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:layout_gravity="fill"
            android:text="@string/level11_button_text"
            android:textSize="40sp"/>
        <Button
            android:id="@+id/level12_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cornerRadius="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:layout_gravity="fill"
            android:text="@string/level12_button_text"
            android:textSize="40sp"/>

    </GridLayout>




</androidx.constraintlayout.widget.ConstraintLayout>