<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HowToPlay">



    <ImageView
        android:id = "@+id/HTP_top_bar"
        android:contentDescription="@string/top_bar_desc"
        android:src="@drawable/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/settings_cog"
        android:background="@null"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/settings_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/HTP_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_to_play"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/HTP_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/how_to_play_text"
        android:layout_marginTop="150sp"
        android:layout_marginStart="75sp"
        android:layout_marginEnd="75sp"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/HTP_label"
        />

    <Button
        android:id="@+id/BTN_return_to_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_to_home"
        android:layout_marginTop="50sp"
        app:layout_constraintTop_toBottomOf="@id/HTP_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>