<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsPage">



    <ImageView
        android:id = "@+id/settings_top_bar"
        android:contentDescription="@string/top_bar_desc"
        android:src="@drawable/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settings_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_header"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/marble_color_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_ball_color"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/settings_label"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/marble_default"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/def"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/marble_color_label"/>

    <Button
        android:id="@+id/marble_red"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/red"
        app:layout_constraintStart_toEndOf="@id/marble_default"
        app:layout_constraintTop_toBottomOf="@id/marble_color_label"
        />

    <Button
        android:id="@+id/marble_blue"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/blue"
        app:layout_constraintStart_toEndOf="@id/marble_red"
        app:layout_constraintTop_toBottomOf="@id/marble_color_label"/>

    <Button
        android:id="@+id/marble_green"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/green"
        app:layout_constraintTop_toBottomOf="@id/marble_color_label"
        app:layout_constraintStart_toEndOf="@id/marble_blue"/>

    <Button
        android:id="@+id/marble_pink"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/pink"
        app:layout_constraintTop_toBottomOf="@id/marble_color_label"
        app:layout_constraintStart_toEndOf="@id/marble_green"
        />

    <TextView
        android:id="@+id/wall_color_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_wall_color"
        android:layout_marginTop="100dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/marble_color_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/wall_default"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/def"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wall_color_label" />

    <Button
        android:id="@+id/wall_red"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/red"
        app:layout_constraintTop_toBottomOf="@id/wall_color_label"
        app:layout_constraintStart_toEndOf="@id/wall_default" />

    <Button
        android:id="@+id/wall_blue"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/wall_color_label"
        app:layout_constraintStart_toEndOf="@id/wall_red" />

    <Button
        android:id="@+id/wall_green"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/green"
        app:layout_constraintTop_toBottomOf="@id/wall_color_label"
        app:layout_constraintStart_toEndOf="@id/wall_blue"  />

    <Button
        android:id="@+id/wall_pink"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/pink"
        app:layout_constraintTop_toBottomOf="@id/wall_color_label"
        app:layout_constraintStart_toEndOf="@id/wall_green"  />

    <Button
        android:id="@+id/return_to_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_to_home"
        android:layout_marginTop="550dp"
        app:layout_constraintTop_toBottomOf="@id/settings_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/curr_marble_color"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        android:background="@color/def"
        app:layout_constraintStart_toEndOf="@id/marble_color_label"
        app:layout_constraintTop_toBottomOf="@id/settings_label"/>

    <TextView
        android:id="@+id/curr_wall_color"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="15dp"
        android:background="@color/def"
        app:layout_constraintStart_toEndOf="@id/wall_color_label"
        app:layout_constraintTop_toBottomOf="@id/marble_color_label" />

</androidx.constraintlayout.widget.ConstraintLayout>